# VirtualRobotMania

./: .gitignore  RACKET-CHEATSHEET.html  RACKET-CHEATSHEET.scrbl  README.md  baseWorldLogic.rkt  basicWorldVisualization.rkt  generalWorldLogic.rkt  primo-world.rkt  robot.rkt  robotVisualization.rkt
ocaml/: .ocamlformat  README.md  TODO.md  TODO.org  dune  dune-project  fill-cache.sh  todo.txt
ocaml/bindings/: apply_bindings.ml  bindings.ml
ocaml/cached/: main.bc.js  main.bc.runtime.js
ocaml/csexp_rpc/: async_csexp.ml  async_csexp.mli  call.ml  call.mli  client.ml  client.mli  csexp_rpc.ml  dune  implementation.ml  implementation.mli  import.ml  input.ml  input.mli  local_csexp.ml  local_csexp.mli  output.ml  output.mli  server.ml  server.mli
ocaml/csexp_rpc_js/: csexp_rpc_js.ml  dune  import.ml  io_utils.ml  io_utils.mli  js_server.ml
ocaml/csexp_rpc_unix/: client.ml  client.mli  dune  import.ml  io_utils.ml  io_utils.mli  server.ml  unix_client.ml  unix_client.mli  unix_server.ml  unix_server.mli
ocaml/game_server/: dune  main.ml
ocaml/game_server_js/: dune  index.html  main.ml
ocaml/games/common/: border.ml  border.mli  dune  js_helpers.ml  js_helpers.mli  set_motors.ml  set_motors.mli
ocaml/games/ctf/: advance.ml  advance.mli  bodies.ml  bodies.mli  body_consts.ml  border.ml  border.mli  bot_name.ml  ctf_consts.ml  ctf_consts.mli  defense_bot.ml  defense_bot.mli  defense_bot_logic.ml  defense_bot_logic.mli  defense_robot_state.ml  dune  exported.ml  exported.mli  flag_logic.ml  flag_logic.mli  image_contents.ml  implementation.ml  implementation.mli  laser_logic.ml  laser_logic.mli  main.ml  main.mli  offense_bot.ml  offense_bot.mli  offense_bot_logic.ml  offense_bot_logic.mli  offense_robot_state.ml  offense_robot_state.mli  protocol.ml  simple_data.ml  state.ml  state.mli
ocaml/games/ctf_unix/: dune
ocaml/games/test/: dune  game_state.ml  implementation.ml
ocaml/geo/src/: angle.ml  angle.mli  angle_intf.ml  dune  general.ml  general.mli  geo.ml  line.ml  line.mli  line_like.ml  line_like.mli  line_seg.ml  line_seg.mli  ray.ml  ray.mli  rect.mli  square.ml  square.mli  vec.ml  vec.mli
ocaml/geo/test/: dune  test_line.ml  test_seg.ml
ocaml/geo_graph/: color.ml  color.mli  display_intf.ml  dune  main.ml
ocaml/geo_graph/example/: direct.ml  dune  main.ml
ocaml/geo_graph/src/: color.ml  color.mli  display.ml  display.mli  dune  foo.ml  polygon.mli  z.ml
ocaml/geo_graph/test/: dune  main.ml
ocaml/geo_graph_js/: display.ml  dune  import.ml
ocaml/geo_graph_js/src/: display.ml  display.mli  dune
ocaml/geo_graph_js/test/: dune  main.ml
ocaml/geo_graph_tsdl/example/: dune  main.ml
ocaml/geo_graph_tsdl/src/: display.ml  display.mli  dune  foo.ml
ocaml/lib/: apply_bindings.ml  bindings.ml  dune
ocaml/protocol_server/: call.ml  call.mli  client.ml  client.mli  dune  implementation.ml  implementation.mli  import.ml  local_csexp.ml  server.ml  server.mli
ocaml/robot_sim/: ctf_sim.ml  ctf_sim.mli  dune  game.ml  game.mli  game_state.ml  game_state.mli  protocol.ml  protocol.mli  simple.ml  simple.mli
ocaml/src/: dune  line_like.ml  simple.ml  types.ml  vec.ml
ocaml/src/geo/: general.ml  general.mli  line.ml  line.mli  line_like.ml  line_like.mli  line_seg.ml  line_seg.mli  ray.ml  ray.mli  square.ml  vec.ml  vec.mli
ocaml/src/virtuality2d/: body.ml  edge.ml  material.mli  shape.ml  shape.mli
ocaml/stub/: robot_sim.c  robot_sim.h  robot_sim_bindings.ml
ocaml/stub_generator/: dune  generate.ml
ocaml/test/: dune  test.c
ocaml/test_driver/: ctf_tester.ml  dune  test_driver.ml
ocaml/test_game/: ctf_sim.ml  ctf_sim.mli  dune  game_state.ml  game_state.mli  protocol.ml  protocol.mli
ocaml/virtuality2d/: body.ml  body.mli  dune  edge.ml  edge.mli  material.ml  material.mli  shape.ml  shape.mli
ocaml/virtuality2d/example/: dune  helpers.ml  long_rec.ml  simple.ml  test.ml  (+2 more)
ocaml/wall-example/: dune  minimal.ml
rust-lib/racket-lib/: Cargo.toml
rust-lib/robotbed/: Cargo.toml
rust-lib/simulator/: Cargo.toml
(+176 files in other folders)
