[package]
name = "racket-lib"
version = "0.1.0"
authors = ["zevbo <minsky-pz@bxscience.edu>"]
edition = "2018"


[lib]
name = "racket_lib"
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulator = {path = "../simulator"}