[package]
name = "robotbed"
version = "0.1.0"
authors = ["zevbo <minsky-pz@bxscience.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulator = {path = "../simulator"}
nalgebra = "0.21.0"
ncollide2d = "0.23.0"
nphysics2d = "0.16.0"
image = "0.23.6"
show-image = "0.6.2"
minifb = "0.16.0"
throw = "0.1.7"
num = "0.3.0"