[package]
name = "simulator"
version = "0.1.0"
authors = ["Yaron M. Minsky <yminsky@gmail.com>"]
edition = "2018"

[lib]
name = "simulator"
crate_type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncollide2d = "0.23.0"
nphysics2d = "0.16.0"
